--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     docker:
       - image: circleci/node:12.7.0
 
-    working_directory: ~/demoCiRn
+    working_directory: ~/repo
 
     steps:
       - checkout
