--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,12 +35,6 @@ jobs:
           paths:
             - node_modules
 
-      - store_test_results:
-          path: test-results
-
-      - store_artifacts:
-          path: test-results
-
   android:
     working_directory: ~/demoCiRn/android
     docker:
@@ -48,66 +42,23 @@ jobs:
     steps:
       - checkout:
           path: ~/demoCiRn
-
       - attach_workspace:
           at: ~/demoCiRn
-
       - restore_cache:
-          key: bundle-v1-{{ checksum "Gemfile.lock" }}-{{ arch }}
-
-      - run: bundle install
-
-      - save_cache:
-          key: bundle-v1-{{ checksum "Gemfile.lock" }}-{{ arch }}
-          paths:
-            - vendor/bundle
-
-  ios:
-    macos:
-      xcode: '9.0'
-    working_directory: ~/demoCiRn
-
-    # use a --login shell so our "set Ruby version" command gets picked up for later steps
-    shell: /bin/bash --login -o pipefail
-
-    steps:
-      - checkout
-
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
-          name: set Ruby version
-          command: echo "ruby-2.4" > ~/.ruby-version
-
-      - restore_cache:
-          key: yarn-v1-{{ checksum "yarn.lock" }}-{{ arch }}
-
-      - restore_cache:
-          key: node-v1-{{ checksum "package.json" }}-{{ arch }}
-
-      # not using a workspace here as Node and Yarn versions
-      # differ between our macOS executor image and the Docker containers above
-      - run: yarn install
-
+          name: Download Dependencies
+          command: ./gradlew androidDependencies
       - save_cache:
-          key: yarn-v1-{{ checksum "yarn.lock" }}-{{ arch }}
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
           paths:
-            - ~/.cache/yarn
-
-      - save_cache:
-          key: node-v1-{{ checksum "package.json" }}-{{ arch }}
-          paths:
-            - node_modules
-
-      - restore_cache:
-          key: bundle-v1-{{ checksum "ios/Gemfile.lock" }}-{{ arch }}
-
+            - ~/.gradle
       - run:
-          command: bundle install
-          working_directory: ios
-
-      - save_cache:
-          key: bundle-v1-{{ checksum "ios/Gemfile.lock" }}-{{ arch }}
-          paths:
-            - vendor/bundle
+          name: Run Tests
+          command: ./gradlew lint test
+      - store_artifacts:
+          path: app/build/reports
+          destination: reports
 
 workflows:
   version: 2
@@ -115,8 +66,5 @@ workflows:
     jobs:
       - node
       - android:
-          requires:
-            - node
-      - ios:
           requires:
             - node
