--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
   android:
     working_directory: ~/demoCiRn/android
     docker:
-      - image: circleci/android:api-27-node8-alpha
+      - image: circleci/android:api-28
     steps:
       - checkout:
           path: ~/demoCiRn
